# dew

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  flake.nix
.github/workflows/: ci.yml  deploy-docs.yml
.moss/: index.sqlite
crates/dew-all/: Cargo.toml
crates/dew-all/src/: lib.rs
crates/dew-complex/: Cargo.toml
crates/dew-complex/src/: funcs.rs  glsl.rs  lib.rs  lua.rs  ops.rs  optimize.rs  rust.rs  tokenstream.rs  wgsl.rs
crates/dew-complex/src/cranelift/: jit.rs
crates/dew-cond/: Cargo.toml
crates/dew-cond/src/: lib.rs  rust.rs  tokenstream.rs
crates/dew-core/: Cargo.toml
crates/dew-core/src/: lib.rs  optimize.rs
crates/dew-linalg/: Cargo.toml
crates/dew-linalg/src/: cranelift.rs  exhaustive_tests.rs  funcs.rs  glsl.rs  lib.rs  lua.rs  ops.rs  optimize.rs  rust.rs  tokenstream.rs  wgsl.rs
crates/dew-linalg/src/cranelift/: jit.rs
crates/dew-quaternion/: Cargo.toml
crates/dew-quaternion/src/: cranelift.rs  funcs.rs  glsl.rs  lib.rs  lua.rs  ops.rs  optimize.rs  rust.rs  tokenstream.rs  wgsl.rs
crates/dew-quaternion/src/cranelift/: jit.rs
crates/dew-scalar/: Cargo.toml
crates/dew-scalar/src/: cranelift.rs  glsl.rs  lib.rs  lua.rs  optimize.rs  rust.rs  tokenstream.rs  wgsl.rs
crates/dew-wasm/: Cargo.toml
crates/dew-wasm/src/: lib.rs
crates/sap-core/: Cargo.toml
crates/sap-core/src/: lib.rs
crates/sap-cranelift/: Cargo.toml
crates/sap-cranelift/src/: lib.rs
crates/sap-linalg/: Cargo.toml
crates/sap-linalg/src/: funcs.rs  lib.rs  ops.rs
crates/sap-lua/: Cargo.toml
crates/sap-lua/src/: lib.rs
crates/sap-std/: Cargo.toml
crates/sap-std/src/: cranelift.rs  exhaustive_tests.rs  lib.rs  lua.rs  parity_tests.rs  wgsl.rs
crates/sap-wgsl/: Cargo.toml
crates/sap-wgsl/src/: lib.rs
docs/: complex.md  core.md  domain-crates-design.md  index.md  introduction.md  linalg-design.md  linalg.md  optimization.md  quaternion.md  scalar.md
docs/.vitepress/: config.ts
docs/backends/: c.md  cranelift.md  cuda.md  hip.md  lua.md  opencl.md  rust.md  wgsl.md
editors/: README.md
editors/tree-sitter-dew/: README.md  grammar.js  package.json
editors/tree-sitter-dew/queries/: highlights.scm
editors/vscode/: README.md  language-configuration.json  package.json
editors/vscode/syntaxes/: dew.tmLanguage.json
playground/: README.md  vite.config.ts
playground/src/: App.tsx
playground/src/styles/: index.css
scripts/: build-wasm.sh
