[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/sap"

[workspace.dependencies]
rhizome-sap-core = { path = "crates/sap-core" }
rhizome-sap-std = { path = "crates/sap-std" }
rhizome-sap-wgsl = { path = "crates/sap-wgsl" }
rhizome-sap-cranelift = { path = "crates/sap-cranelift" }
rhizome-sap-lua = { path = "crates/sap-lua" }
rhizome-sap-linalg = { path = "crates/sap-linalg" }
