[package]
name = "rhizome-dew-linalg"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Linear algebra types and operations for dew expressions"

[features]
default = ["3d"]
3d = []           # Vec3, Mat3
4d = ["3d"]       # Vec4, Mat4 (implies 3d)
wgsl = ["rhizome-dew-cond/wgsl"]         # WGSL code generation
glsl = ["rhizome-dew-cond/glsl"]         # GLSL code generation
rust = ["rhizome-dew-cond/rust"]         # Rust text codegen
lua-codegen = ["rhizome-dew-cond/lua-codegen"]  # Pure Rust codegen, WASM-compatible
lua = ["lua-codegen", "mlua"]             # Full Lua with execution via mlua
cranelift = ["cranelift-codegen", "cranelift-frontend", "cranelift-jit", "cranelift-module", "rhizome-dew-cond/cranelift"]
optimize = ["rhizome-dew-core/optimize"]  # Expression optimization passes
all = ["3d", "4d", "wgsl", "glsl", "rust", "lua", "cranelift"]

[dependencies]
rhizome-dew-core = { workspace = true, features = ["func"] }
rhizome-dew-cond.workspace = true
num-traits = "0.2"

# Optional backend dependencies
mlua = { version = "0.10", features = ["luajit", "vendored"], optional = true }
cranelift-codegen = { version = "0.116", optional = true }
cranelift-frontend = { version = "0.116", optional = true }
cranelift-jit = { version = "0.116", optional = true }
cranelift-module = { version = "0.116", optional = true }

