[package]
name = "rhizome-dew-quaternion"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Quaternion support for dew expressions"

[features]
default = []
wgsl = ["rhizome-dew-cond/wgsl"]
glsl = ["rhizome-dew-cond/glsl"]
lua = ["mlua", "rhizome-dew-cond/lua"]
cranelift = ["cranelift-codegen", "cranelift-frontend", "cranelift-jit", "cranelift-module", "rhizome-dew-cond/cranelift"]
optimize = ["rhizome-dew-core/optimize"]  # Expression optimization passes
all = ["wgsl", "glsl", "lua", "cranelift"]

[dependencies]
rhizome-dew-core = { workspace = true, features = ["func"] }
rhizome-dew-cond.workspace = true
num-traits = "0.2"

mlua = { version = "0.10", features = ["luajit", "vendored"], optional = true }
cranelift-codegen = { version = "0.116", optional = true }
cranelift-frontend = { version = "0.116", optional = true }
cranelift-jit = { version = "0.116", optional = true }
cranelift-module = { version = "0.116", optional = true }
