[package]
name = "rhizome-dew-quaternion"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Quaternion support for dew expressions"

[features]
default = []
wgsl = ["rhizome-dew-cond/wgsl"]
glsl = ["rhizome-dew-cond/glsl"]
rust = ["rhizome-dew-cond/rust"]  # Rust text codegen
tokenstream = ["rhizome-dew-cond/tokenstream", "quote", "proc-macro2"]  # TokenStream codegen for proc-macros
lua-codegen = ["rhizome-dew-cond/lua-codegen"]  # Pure Rust codegen, WASM-compatible
lua = ["lua-codegen", "mlua"]                    # Full Lua with execution via mlua
cranelift = ["cranelift-codegen", "cranelift-frontend", "cranelift-jit", "cranelift-module", "rhizome-dew-cond/cranelift"]
optimize = ["rhizome-dew-core/optimize"]  # Expression optimization passes
all = ["wgsl", "glsl", "rust", "tokenstream", "lua", "cranelift"]

[dependencies]
rhizome-dew-core = { workspace = true, features = ["func"] }
rhizome-dew-cond.workspace = true
num-traits = "0.2"

# TokenStream backend
quote = { version = "1.0", optional = true }
proc-macro2 = { version = "1.0", optional = true }

mlua = { version = "0.10", features = ["luajit", "vendored"], optional = true }
cranelift-codegen = { version = "0.116", optional = true }
cranelift-frontend = { version = "0.116", optional = true }
cranelift-jit = { version = "0.116", optional = true }
cranelift-module = { version = "0.116", optional = true }
