[package]
name = "rhizome-dew-scalar"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Standard scalar function library for dew expressions"

[features]
default = []
wgsl = ["rhizome-dew-cond/wgsl"]
glsl = ["rhizome-dew-cond/glsl"]
rust = ["rhizome-dew-cond/rust"]  # Rust text codegen
lua-codegen = ["rhizome-dew-cond/lua-codegen"]  # Pure Rust codegen, WASM-compatible
lua = ["lua-codegen", "mlua"]  # Full Lua with execution via mlua
cranelift = ["cranelift-codegen", "cranelift-frontend", "cranelift-jit", "cranelift-module", "rhizome-dew-cond/cranelift"]
optimize = ["rhizome-dew-core/optimize"]  # Expression optimization passes
all = ["wgsl", "glsl", "rust", "lua", "cranelift"]

[dependencies]
rhizome-dew-core = { workspace = true, features = ["func"] }
rhizome-dew-cond.workspace = true
num-traits = "0.2"

# Lua backend
mlua = { version = "0.10", features = ["luajit", "vendored"], optional = true }

# Cranelift backend
cranelift-codegen = { version = "0.116", optional = true }
cranelift-frontend = { version = "0.116", optional = true }
cranelift-jit = { version = "0.116", optional = true }
cranelift-module = { version = "0.116", optional = true }
