[package]
name = "rhizome-dew-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for Dew expression language"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "core"]

# Module profiles
core = ["rhizome-dew-scalar"]
linalg = ["core", "rhizome-dew-linalg"]
graphics = ["linalg", "rhizome-dew-quaternion"]
signal = ["core", "rhizome-dew-complex"]
full = ["core", "rhizome-dew-linalg", "rhizome-dew-complex", "rhizome-dew-quaternion"]

[dependencies]
rhizome-dew-core = { path = "../dew-core", features = ["cond", "func"] }

# Optional domain crates
rhizome-dew-scalar = { path = "../dew-scalar", features = ["wgsl", "glsl", "lua-codegen"], optional = true }
rhizome-dew-linalg = { path = "../dew-linalg", features = ["wgsl", "glsl", "lua-codegen"], optional = true }
rhizome-dew-complex = { path = "../dew-complex", features = ["wgsl", "glsl", "lua-codegen"], optional = true }
rhizome-dew-quaternion = { path = "../dew-quaternion", features = ["wgsl", "glsl", "lua-codegen"], optional = true }

wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
