[package]
name = "sap-cranelift"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cranelift JIT compilation backend for sap expressions"

[dependencies]
sap-core.workspace = true
cranelift = "0.116"
cranelift-jit = "0.116"
cranelift-module = "0.116"
target-lexicon = "0.13"
