[package]
name = "rhizome-sap-linalg"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Linear algebra types and operations for sap expressions"

[features]
default = ["3d"]
3d = []           # Vec3, Mat3
4d = ["3d"]       # Vec4, Mat4 (implies 3d)

[dependencies]
rhizome-sap-core = { workspace = true }
num-traits = "0.2"
