[package]
name = "sap-std"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Standard function library for sap expressions"

[features]
default = []
wgsl = ["dep:sap-wgsl"]
lua = ["dep:sap-lua"]
cranelift = ["dep:sap-cranelift"]
all = ["wgsl", "lua", "cranelift"]

[dependencies]
sap-core.workspace = true
sap-wgsl = { workspace = true, optional = true }
sap-lua = { workspace = true, optional = true }
sap-cranelift = { workspace = true, optional = true }
