[package]
name = "rhizome-sap-std"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Standard function library for sap expressions"

[features]
default = []
wgsl = ["dep:rhizome-sap-wgsl"]
lua = ["dep:rhizome-sap-lua"]
cranelift = ["dep:rhizome-sap-cranelift"]
all = ["wgsl", "lua", "cranelift"]

[dependencies]
rhizome-sap-core.workspace = true
rhizome-sap-wgsl = { workspace = true, optional = true }
rhizome-sap-lua = { workspace = true, optional = true }
rhizome-sap-cranelift = { workspace = true, optional = true }
